--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom": "^5.1.2",
     "serverless-mysql": "^1.5.3",
     "sql-template-strings": "^2.2.2",
-    "url-loader": "^3.0.0"
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.6"
   }
 }
