--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "path": "^0.12.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "serverless-mysql": "^1.5.3",
     "sql-template-strings": "^2.2.2",
